# edu-games

./: .ghci  .ghcid  Justfile  cabal.project  common.yaml  default.nix  games.cabal
app/: mct.hs  mctest.hs  playTTT.hs
game/: Game.hs  package.yaml
src/: Games.hs  Quux.hs
src-chess/: Chess.hs
src-chess/Chess/: Internal.hs
src-game/: Game.hs
src-mcts/: MCTS.hs
src-mcts/MCTS/: Internal.hs
src-ttt/: TTT.hs
src-ttt/TTT/: Internal.hs  UIText.hs
src/chess/: Chess.hs
src/game/: Game.hs
src/mct/: MCT.hs
src/total/: Total.hs
src/ttt/: TTT.hs
ttt/: TTT.hs  package.yaml
ttt/TTT/: Game.hs
