cabal-version: 3.0
name: games
version: 0.1.0.0

common shared -- {{{
  mixins:
    , base hiding (Prelude)
    , base-prelude (BasePrelude as Prelude)
  default-language: GHC2021
  include-dirs: include
  default-extensions:
    , BlockArguments
    , CPP
    , DataKinds
    , LambdaCase
    , MultiWayIf
    , RecordWildCards
    , TypeFamilies
    , ViewPatterns
  -- ghc-options: -pgmL markdown-unlit
  ghc-options: -O2
  build-depends: base, base-prelude
    , MonadRandom
    , ansi-terminal
    , array
    , containers
    , extra
    , lens
    , linear
    , llrbtree
    , mtl
    , pcre-heavy
    , random
    , random-shuffle
    , split
    , tagged
    , text
    , unix

-- }}}

library
  import: shared
  hs-source-dirs: src, src/game, src/mct, src/ttt, src/total
  exposed-modules: Quux
  other-modules: Game, MCT, TTT, Total

library total
  import: shared
  hs-source-dirs: src/total
  exposed-modules: Total

library game
  import: shared
  hs-source-dirs: src/game
  exposed-modules: Game

library mct
  import: shared
  hs-source-dirs: src/mct
  exposed-modules: MCT
  build-depends: game

library ttt
  import: shared
  hs-source-dirs: src/ttt
  exposed-modules: TTT
  build-depends: game
