cabal-version: 3.0
name: games
version: 0.1.0.0

common shared -- {{{
  mixins:
    , base hiding (Prelude)
    , base-prelude (BasePrelude as Prelude)
  default-language: GHC2021
  -- include-dirs: include
  default-extensions:
    , BlockArguments
    , CPP
    , DataKinds
    , LambdaCase
    , MultiWayIf
    , RecordWildCards
    , TypeFamilies
    , ViewPatterns
  -- ghc-options: -pgmL markdown-unlit
  ghc-options: -O2
  build-depends: base, base-prelude
    , MonadRandom
    , ansi-terminal
    , array
    , async
    , containers
    , extra
    , lens
    , linear
    , llrbtree
    , mtl
    , pcre-heavy
    , random
    , random-shuffle
    , split
    , stm
    , tagged
    , text
    , unix

-- }}}

library
  import: shared
  reexported-modules: Game, TTT, Chess, MCTS
  build-depends: game, mcts, ttt, chess

library game
  import: shared
  hs-source-dirs: src-game
  exposed-modules: Game

library mcts
  import: shared
  hs-source-dirs: src-mcts
  exposed-modules: MCTS, MCTS.Internal
  build-depends: game

library ttt
  import: shared
  hs-source-dirs: src-ttt
  exposed-modules: TTT
  other-modules: TTT.Game, TTT.UIText
  build-depends: game

library chess
  import: shared
  hs-source-dirs: src-chess
  exposed-modules: Chess, Chess.Internal
  build-depends: game

executable mctest
  import: shared
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  main-is: mctest.hs
  hs-source-dirs: app
  build-depends: games

executable playTTT
  import: shared
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  main-is: playTTT.hs
  hs-source-dirs: app
  build-depends: games


